<resources>
    <string name="app_name">Vinted</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="txt_btn_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">nombre</string>
    <string name="hint_user">Nombre de usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="txt_btn_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="username_card">Daniel Nieto</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 Me gusta</string>
    <string name="txt_nombreproducto">Nombre del producto</string>
    <string name="txt_descproducto">Descripcion</string>
    <string name="txt_priceproducto">Precio</string>
    <string name="txt_colorproducto">Color</string>
    <string name="txt_tallaproducto">Talla</string>
    <string name="btn_addproducto">Agregar producto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar">Buscar</string>
    <string name="home">Home</string>
    <string name="profile">Mi cuenta</string>
    <string name="shopping">Mis Pedidos</string>
    <string name="secondWord_detail">Me gusta</string>
    <string name="titleDetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipiscing elit hac conubia porta, gravida proin tortor est sociis sagittis commodo feugiat cras duis, curae accumsan integer aliquam quam ornare lobortis rutrum ligula. Cursus gravida cubilia sem tempus luctus magnis, class hendrerit massa quisque interdum dui ut, elementum lacinia donec mattis ornare. Faucibus pellentesque fermentum lobortis hendrerit ullamcorper ut donec mollis litora vivamus tellus erat a, etiam mus dapibus elementum luctus aliquet nullam dictumst cubilia facilisi duis.</string>
    <string name="transitionName_picture">trasitionnamepicture</string>
</resources>
