<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.dmareca.vintedmvvm.viewmodel.RegisterViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.CreateAccountActivity">

        <include layout="@layout/actionbar_toolbar"></include>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={model.txtUsername}"
                        android:hint="@string/hint_user" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={model.txtEmail}"
                        android:hint="@string/hint_email" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:text="@={model.txtPw}"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtConfirmaPw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_confirm_password"
                        android:text="@={model.txtConfirmaPw}"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnCrearCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary_dark"
                    android:text="@string/txt_btn_createaccount"
                    android:textColor="@color/primary"
                    android:onClick="@{(v) -> model.onRegister(v)}"
                    android:theme="@style/RaiseButtonDark" />

            </LinearLayout>

        </ScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>