<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.dmareca.vintedmvvm.viewmodel.ProductoViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:weightSum="100"
        android:layout_height="match_parent">

        <include layout="@layout/actionbar_toolbar"></include>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:checkedChip="@+id/chipCategoriaHombre"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chipCategoriaHombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        android:text="Hombre" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chipCategoriaMujer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        android:text="Mujer" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chipCategoriaNiños"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        android:text="Niños" />

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNombreProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={model.nombreProducto}"
                        android:hint="@string/txt_nombreproducto" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtDescProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_descproducto"
                        android:text="@={model.descrProducto}"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPrecioProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_priceproducto"
                        android:text="@={model.precioProducto}"
                        android:inputType="numberDecimal" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/edittext_margin_createaccount"
                        android:theme="@style/EditTextBlack">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtColorProducto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={model.colorProducto}"
                            android:hint="@string/txt_colorproducto" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/edittext_margin_createaccount"
                        android:theme="@style/EditTextBlack">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtTallaProducto"
                            android:text="@={model.tallaProducto}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_tallaproducto" />

                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnAddProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary_dark"
                    android:text="@string/btn_addproducto"
                    android:textColor="@color/primary"
                    android:theme="@style/RaiseButtonDark" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>