<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.dmareca.vintedmvvm.viewmodel.UsuarioViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".view.ui.LoginActivity">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="316dp"
                    android:layout_height="111dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/logo"
                    android:scaleType="fitCenter" />

            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_horizontal_login">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={model.EmailAddress}"
                            android:hint="@string/hint_user" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={model.Password}"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primary_dark"
                        android:text="@string/txt_btn_login"
                        android:textColor="@color/primary"
                        android:onClick="@{(v) -> model.onClick(v)}"
                        android:theme="@style/RaiseButtonDark" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txtCrearCuenta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dont_have_account"
                            android:textColor="@color/primary_dark"
                            android:textStyle="bold"
                            android:textSize="@dimen/textsize_donthaveaccount" />
                    </RelativeLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>